--- a/main.html
+++ b/main.html
@@ -1,16 +1,49 @@
 <!DOCTYPE html>
-
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Remember Me Login</title>
+  </head>
+  <body>
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+    <h1>Login Form</h1>
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <form id="login-form">
+      <input
+        type="text"
+        id="username"
+        placeholder="Username"
+        value=""
+      />
+      <br /><br />
 
-</body>
+      <input
+        type="password"
+        id="password"
+        placeholder="Password"
+        value=""
+      />
+      <br /><br />
 
+      <label>
+        <input type="checkbox" id="checkbox" />
+        Remember me.
+      </label>
+      <br /><br />
+
+      <input
+        type="submit"
+        id="submit"
+        value="Submit"
+      />
+    </form>
+
+    <br />
+
+    <button id="existing" style="display: none;">
+      Login as existing user
+    </button>
+
+    <script src="./script.js"></script>
+  </body>
 </html>
