--- a/main.html
+++ b/main.html
@@ -9,6 +9,8 @@
     <h1>Login Form</h1>
 
     <form id="login-form">
+
+      <label for="username">Username:</label>
       <input
         type="text"
         id="username"
@@ -17,6 +19,7 @@
       />
       <br /><br />
 
+      <label for="password">Password:</label>
       <input
         type="password"
         id="password"
@@ -25,10 +28,8 @@
       />
       <br /><br />
 
-      <label>
-        <input type="checkbox" id="checkbox" />
-        Remember me.
-      </label>
+      <label for="checkbox">Remember me:</label>
+      <input type="checkbox" id="checkbox" />
       <br /><br />
 
       <input
@@ -36,6 +37,7 @@
         id="submit"
         value="Submit"
       />
+
     </form>
 
     <br />
@@ -44,6 +46,6 @@
       Login as existing user
     </button>
 
-    <script src="./script.js"></script>
+    <script src="./script.js"></cript>
   </body>
 </html>
