--- a/main.html
+++ b/main.html
@@ -11,41 +11,30 @@
     <form id="login-form">
 
       <label for="username">Username:</label>
-      <input
-        type="text"
-        id="username"
-        placeholder="Username"
-        value=""
-      />
+      <input type="text" id="username" placeholder="Username" />
       <br /><br />
 
       <label for="password">Password:</label>
-      <input
-        type="password"
-        id="password"
-        placeholder="Password"
-        value=""
-      />
+      <input type="password" id="password" placeholder="Password" />
       <br /><br />
 
       <label for="checkbox">Remember me:</label>
       <input type="checkbox" id="checkbox" />
       <br /><br />
 
-      <input
-        type="submit"
-        id="submit"
-        value="Submit"
-      />
+      <input type="submit" id="submit" value="Submit" />
 
     </form>
 
     <br />
 
-    <button id="existing" style="display: none;">
+    <button id="existing" style="display:none;">
       Login as existing user
     </button>
 
-    <script src="./script.js"></cript>
+    <!-- ✅ FIXED HERE -->
+    <script src="./script.js"></script>
+
   </body>
 </html>
+
